fixed margin and padding problems on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -32,18 +32,10 @@ mobile
 	}
 	section > h1, header h1{ font-size: 2em }
 	p { margin-bottom: 0.5em; }
-	header, footer, #main { min-width: none;}
+	article, section{margin:0;padding:1em 0}
 	section ul li { margin-left: 1em; }
 	article h1 { margin-top: 1em; }
-	* {
-		margin: 0;
-		padding: 0;
-	}
-	div {
-		clear: both !important;
-		float: none !important;
-		width: 320px !important;
-	}
+	
 	footer { padding:0;}
 	footer ul#online li{
 		float:none;
